remove cell padding and just align left column to center fixes alignment issues

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: -1rem;
   color:#666666;
   font-style: italic;
-  text-align: right;
+  text-align: center;
   text-rendering: optimizeLegibility;
 }
 
